src/assets/templates/adminlte/custom_styles.css
/* ... */
.card:nth-child(1) .license_footer,
.card:nth-child(6) .license_footer {
    position: relative;
    top: 20%;
}

.card:nth-child(2) .license_footer,
.card:nth-child(3) .license_footer {
    position: relative;
    top: 2%;
}

.card:nth-child(5) .license_footer,
.card:nth-child(4) .license_footer {
    position: relative;
    top: 11%;
}

.img-a {
    color: #686060 !important;
    text-decoration: none !important;
}

.cp-img {
    font-size: 4.3rem;
    border: 0.07rem solid #e8dede;
    border-radius: 15%;
    padding: 0.21rem;
    background: white;
    position: relative;
    top: 3%;
    color: orange;
    width: 6.07rem;
    height: 5rem;
    object-fit: fill;
}

.cp_bg:hover {
    background: #e6e2e2 !important;
    transition-duration: 0.3s;
}

.cp_bg {
    background-color: #ecebeb;
    transition-duration: 0.3s;
}

.img-a:hover {
    color: black !important;
    transition-duration: 0.3s;
}

.simplePassMeter {
    display: none !important;
}

.spice {
    background: #373636 !important;
    transition-duration: 0.3s;
}

.spice:hover {
    background-color: #1c1b1b !important;
}

/* BS5 form-check accent color to match old icheck-success blue */
.form-check-input:checked {
    background-color: #136bdd !important;
    border-color: #136bdd !important;
}

.form-check-input:not(:checked):not(:disabled):hover {
    border-color: #136bdd !important;
}

.link,
span#display_desc a {
    color: #0056b3 !important;
    text-decoration: underline !important;
}

.link:hover,
span#display_desc a:hover {
    color: #0078f8 !important;
}

.swal-wide {
    width: 78.5rem !important;
}

ul.dropdown-menu,
ul.dropdown-menu.show {
    background-color: #2c3b41 !important;
    width: max-content !important;
}

.ui-dialog-content.ui-widget-content {
    min-height: 1.07rem !important;
    background: white !important;
    position: relative;
    top: 0.5rem !important;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.ui-dialog-titlebar.ui-corner-all.ui-widget-header.ui-helper-clearfix.ui-draggable-handle {
    position: relative;
    top: 0.57rem;
}

.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-draggable.ui-resizable .ui-dialog-titlebar-close {
    display: none !important;
}

.ui-dialog .ui-dialog-title {
    font-weight: bold;
    border-left: 0.3rem solid chartreuse;
    padding: 0.7rem;
}

.ui-dialog .ui-dialog-title,
#dialogInvo.ui-dialog-content.ui-widget-content,
#dialogPaym.ui-dialog-content.ui-widget-content {
    background-color: white;
}

#dialogInvo.ui-dialog-content.ui-widget-content,
#dialogPaym.ui-dialog-content.ui-widget-content {
    min-height: 2.7rem !important;
    width: 93% !important;
}

#dialogInvo.ui-dialog-content.ui-widget-content p,
#dialogPaym.ui-dialog-content.ui-widget-content p {
    position: relative;
    top: 0.5rem;
    left: -0.3rem;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type='number'] {
    -moz-appearance: textfield;
}

.user-panel .image {
    padding-left: 0 !important;
}

.swal2-header {
    border: none;
}

.text-2lg {
    font-size: 1.5rem;
}

.tablesorter-jui .header,
.tablesorter-jui .tablesorter-header {
    padding: 0.2rem;
}

table.tablesorter {
    width: inherit;
    max-width: 95%;
    min-width: 50%;
    margin: 0.35rem 0 0.35rem;
}

table.tablesorter .header {
    color: #3d3d3d;
}

table.tablesorter tbody td {
    white-space: nowrap;
}

.form-gray {
    background-color: #f9fbfd;
}

.rounded-circle-home {
    width: 2.4rem !important;
    margin-right: 0.35rem;
}

.count-link {
    display: inline !important;
    margin-left: 0 !important;
    margin-top: -0.7rem !important;
}

.count-link a {
    font-size: 2.5rem;
    color: #f9fbfd !important;
}

#title_btns .btn-info {
    color: #343a40 !important;
    background-color: #fff !important;
    border-color: #343a40 !important;
    padding: 0.28rem 0.85rem !important;
    font-size: 1rem !important;
}

#title_btns .btn-info:nth-child(1) {
    border-radius: 0.35rem 0 0 0.35rem;
}

#title_btns .btn-info:nth-child(4) {
    border-radius: 0 0.35rem 0.35rem 0;
}

#title_btns .btn-info:hover {
    color: #fff !important;
    background-color: #343a40 !important;
    border-color: #343a40 !important;
    padding: 0.28rem 0.85rem !important;
    font-size: 1rem !important;
    transition-duration: 0.3s;
}

#crud-table .printer-hidden {
    color: #fff;
    background: #4f5962;
    border: 0.07rem solid #4f5962;
    padding: 0.2rem 0.4rem;
    font-size: 0.9rem;
    border-radius: 0.5rem;
}

#crud-table .printer-hidden:hover {
    background: #4f5962 !important;
    border: 0.07rem solid #4f5962 !important;
    transition-duration: 0.3s;
}

#title_btns .btn-info.active {
    color: #fff !important;
    background-color: #4f5962 !important;
    border-color: #4f5962 !important;
}

.service-heading {
    font-size: 2.07rem !important;
    margin-left: 0 !important;
    display: inline;
}

.social-image {
    width: 2.8rem !important;
}

a.blog-link:hover {
    color: #4f5962;
}

/* Uniform height for small-box info cards on view service pages */
.small-box .inner {
    min-height: 120px;
}

.info-box {
    box-shadow: none;
}

.info-box:hover,
.card:hover {
    box-shadow:
        0 0 0.07rem rgba(0, 0, 0, 0.125),
        0 0.2rem 0.4rem rgba(0, 0, 0, 0.2);
}

.info-box .info-box-icon {
    font-size: 3.875rem;
}

.row-flex {
    display: flex;
    flex-wrap: wrap;
}

.input-group-sm > .input-group-text {
    padding-bottom: 0.35rem;
}

#invoice_table_wrapper {
    width: 100%;
}

td.details-control {
    background: url('../../images/icons/details_open.png') no-repeat center center;
    cursor: pointer;
}

tr.shown td.details-control {
    background: url('../../images/icons/details_close.png') no-repeat center center;
}

#invoice_table td {
    vertical-align: middle;
}
/* ... */

